[gd_scene load_steps=2 format=3 uid="uid://co38hlojnukyh"]

[ext_resource type="Script" uid="uid://4ti6obhru4fs" path="res://Rewards/reward_item.gd" id="1_kf2ft"]

[node name="RewardItem" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1436.0
offset_bottom = -451.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kf2ft")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 487.0
offset_bottom = 631.0
color = Color(0.325766, 0.393227, 0.358337, 0.568627)

[node name="NameLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 51.0
offset_top = 18.0
offset_right = 440.0
offset_bottom = 101.0
theme_override_font_sizes/font_size = 60
text = "NAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 23.0
offset_top = 301.0
offset_right = 467.0
offset_bottom = 596.0
theme_override_font_sizes/font_size = 40
text = "Blah blah blah lots of multiline text"
horizontal_alignment = 1
autowrap_mode = 3
